tempfile/derive_more/tests/compile_fail/as_ref/multiple_field_attrs.rs
#[derive(derive_more::AsRef)]
struct Foo {
    #[as_ref]
    #[as_ref(forward)]
    bar: i32,
}

fn main() {}
